[project]
name = "pynus"
version = "1.0.1.dev1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rainbow-pick",
]

[tool.uv.sources]
rainbow-pick = { git = "https://github.com/GBiondo1310/rainbow_pick.git" }
pynus = { workspace = true }

[dependency-groups]
dev = [
    "pynus",
]
