[project]
name = "pynus"
version = "1.2.1.dev1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rainbow-pick @ git+https://github.com/GBiondo1310/rainbow_pick.git", "pick==2.4.0"
]

[tool.uv.sources]
rainbow-pick = { git = "https://github.com/GBiondo1310/rainbow_pick.git" }
pynus = { workspace = true }

[dependency-groups]
dev = [
    "pynus",
    "pytest>=9.1.1",
]

[tool.setuptools.packages.find]
include = ["pynus*"]
namespaces = false
